ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/prometheus/service_10.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: prometheus
  name: prometheus
  namespace: kubeprod
spec:
  ports:
  - name: web
    port: 9090
    targetPort: 9090
  selector:
    name: prometheus
  type: ClusterIP
