ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/prometheus/ingress_4.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.hosteaching.ovh/oauth2/start?rd=%2F$server_name$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.hosteaching.ovh/oauth2/auth
  labels:
    name: prometheus
  name: prometheus
  namespace: kubeprod
spec:
  rules:
  - host: prometheus.hosteaching.ovh
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
      - backend:
          serviceName: alertmanager
          servicePort: 9093
        path: /alertmanager
  tls:
  - hosts:
    - prometheus.hosteaching.ovh
    secretName: prometheus-tls
